Crear y actualizar parejas terminado

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3500
-DSN= "postgresql://postgres:postgres@localhost:5432/ipadel?"
+DSN0= "postgresql://postgres:postgres@localhost:5432/ipadel?"
+DSN= "user id=sa;password=@NissanGT2018;port=1433;database=ipadel"
 SECRET="EstaEsLaClaveparacodificarelToken0123544789512"
 
